@@ -289,6 +289,8 @@ find_root_device_from_libzfs (const char *dir)
     nvlist_t **nvlist_array;
     unsigned int nvlist_count;
 
+    grub_util_init_libzfs ();
+
     zpool = zpool_open (libzfs_handle, poolname);
     nvlist = zpool_get_config (zpool, NULL);
 
